@@ -33,7 +33,7 @@ namespace TAO
    *
    */
   template<typename S,
-           class Insert_Policy>
+           template <typename> class Insert_Policy>
   class In_Vector_Argument_T : public InArgument
   {
   public:
@@ -57,7 +57,7 @@ namespace TAO
    *
    */
   template<typename S,
-           class Insert_Policy>
+           template <typename> class Insert_Policy>
   class In_Vector_Clonable_Argument_T :
           public In_Vector_Argument_T<S, Insert_Policy>
   {
@@ -79,7 +79,7 @@ namespace TAO
    *
    */
   template<typename S,
-           class Insert_Policy>
+           template <typename> class Insert_Policy>
   class Inout_Vector_Argument_T : public InoutArgument
   {
   public:
@@ -104,7 +104,7 @@ namespace TAO
    *
    */
   template<typename S,
-           class Insert_Policy>
+           template <typename> class Insert_Policy>
   class Out_Vector_Argument_T : public OutArgument
   {
   public:
@@ -127,7 +127,7 @@ namespace TAO
    *
    */
   template<typename S,
-           class Insert_Policy>
+           template <typename> class Insert_Policy>
   class Ret_Vector_Argument_T : public RetArgument
   {
   public:
@@ -156,7 +156,7 @@ namespace TAO
    *
    */
   template<typename T,
-           class Insert_Policy>
+           template <typename> class Insert_Policy>
   struct Vector_Arg_Traits_T
   {
     typedef T                                           ret_type;
